Fix LinkedIn link

--- a/_includes/share.html
+++ b/_includes/share.html
@@ -10,7 +10,7 @@
             </a>
         </li>
         <li class="linkedin">
-            <a href="https://www.linkedin.com/shareArticle?mini=true&url={{ page.url | replace:'index.html','' | prepend: site.baseurl | prepend: site.url | uri_escape}}&title={{ page.title | default:"" | uri_escape}}"
+            <a href="https://www.linkedin.com/shareArticle?mini=true&url={{ site.url }}{{ page.url }}&title={{ page.title | default:"" | uri_escape}}"
                 title="Share on LinkedIn" target="_blank">
                 {% include social/linkedin.svg %}
             </a>
