Use github-dark theme for comment box

--- a/_layouts/post.html
+++ b/_layouts/post.html
@@ -28,7 +28,7 @@ layout: default
         repo="christianhelle/christianhelle.github.io"
         issue-term="og:title"
         label="comment"
-        theme="github-light"
+        theme="github-dark"
         crossorigin="anonymous"
         async>
   </script>
