--- a/_layouts/post.html
+++ b/_layouts/post.html
@@ -36,3 +36,5 @@ layout: default
 
   <a class="u-url" href="{{ page.url | relative_url }}" hidden></a>
 </article>
+
+{% include cookie-consent.html %}
