Include infolinks.html in posts before the share links

--- a/_layouts/post.html
+++ b/_layouts/post.html
@@ -21,7 +21,8 @@ layout: default
   <div class="post-content e-content" itemprop="articleBody">
     {{ content }}
   </div>
-
+    
+  {% include infolinks.html %}
   {% include share.html %}
 
   <script src="https://utteranc.es/client.js"
