Update footer.html to use site.footer_text

--- a/_includes/footer.html
+++ b/_includes/footer.html
@@ -12,7 +12,7 @@
                         </svg><span>Subscribe</span>
                     </a>
                 </p>
-                <p>{{ site.description | escape }}</p>
+                <p>{{ site.footer_text | escape }}</p>
                 {%- if site.author %}
                 <ul class="contact-list">
                     {% if site.author.name -%}
