Ad blocking recovery

--- a/_includes/head.html
+++ b/_includes/head.html
@@ -8,4 +8,6 @@
     {%- include google-analytics.html -%}
     {%- include custom-head.html -%}
     {%- include ads.html -%}
+    {%- include ad-blocking-recovery.html -%}
+    {%- include ad-blocking-error-message.html -%}
 </head>
