Revert back to using site description

--- a/_includes/footer.html
+++ b/_includes/footer.html
@@ -14,7 +14,7 @@
                         </svg><span>Subscribe</span>
                     </a>
                 </p>
-                <p>{{ site.footer_text | escape }}</p>
+                <p>{{ site.description | escape }}</p>
                 {%- if site.author %}
                 <ul class="contact-list">
                     {% if site.author.name -%}
