Add Disqus comment count script to footer

--- a/_includes/footer.html
+++ b/_includes/footer.html
@@ -33,5 +33,7 @@
         </div>
 
     </div>
+    
+    <script id="dsq-count-scr" src="//christianhelle-com.disqus.com/count.js" async></script>
 
 </footer>
