--- a/_layouts/post.html
+++ b/_layouts/post.html
@@ -1,7 +1,7 @@
 ---
 layout: base
 ---
-<article class="post h-entry" itemscope itemtype="http://schema.org/BlogPosting">
+<article class="post h-entry" itemscope itemtype="https://schema.org/BlogPosting">
 
   <header class="post-header">
     <h1 class="post-title p-name" itemprop="name headline">{{ page.title | escape }}</h1>
@@ -11,7 +11,7 @@ layout: base
         {{ page.date | date: date_format }}
       </time>
       {%- if page.author -%}
-      • <span itemprop="author" itemscope itemtype="http://schema.org/Person">
+      • <span itemprop="author" itemscope itemtype="https://schema.org/Person">
         <span class="p-author h-card" itemprop="name">{{ page.author }}</span>
       </span>
       {%- endif -%}
